--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" contebt="Just for fun" />
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
     <title>Hyacinth</title>
-    <link rel="stylesheet" href="/static/arkicon.css"/>
+    <link rel="stylesheet" href="./static/arkicon.css"/>
   </head>
   <body>
     <div id="app"></div>
