--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
     <title>Hyacinth</title>
     <link rel="stylesheet" href="./static/arkicon.css"/>
+    <!--link rel="stylesheet" media="all" href="//cdnjs.cloudflare.com/ajax/libs/Han/3.3.0/han.min.css"-->
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!--script src="//cdnjs.cloudflare.com/ajax/libs/Han/3.3.0/han.min.js"></script-->
   </body>
 </html>
